--- a/public/homePage.html
+++ b/public/homePage.html
@@ -23,10 +23,7 @@
             
         </div>
 
-        <!-- button -->
-        <div>
-            <button class="w3-button w3-grey buttonGrey" >Back</button>
-        </div>
+        
 
 
     </div>
@@ -37,7 +34,15 @@
 
     <div class="container">
         <p>
-            this is my shoes website!!!!!!
+            <h1> About us </h1>
+        We are a "MY SHOES" company <br> 
+        Our specialty is ordering special shoe models from all over the world <br> 
+        The company was founded in 2022 by 3 partners who really like special shoes <br>
+        We want to help people around the world obtain special shoe models that are not found in every store <br>
+        We do this by contracting with various suppliers from a variety of countries in the world <br>
+        We guarantee that the shoes we import will be 100% original <br>
+        We invite you to look at our catalog page and stay updated on new models and collections <br>
+
         </p>
 
     </div>
