Add contactUs CSS page

--- a/public/homePage.html
+++ b/public/homePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY SHOES HomePage</title>
     
 
     <!-- CSS -->
@@ -34,7 +34,7 @@
 
     <div class="container">
         <p>
-            <h1> About us </h1>
+            <h1> About The Company </h1>
         We are a "MY SHOES" company <br> 
         Our specialty is ordering special shoe models from all over the world <br> 
         The company was founded in 2022 by 3 partners who really like special shoes <br>
