add order page and shopping cart

--- a/public/AddKids.html
+++ b/public/AddKids.html
@@ -12,28 +12,33 @@
 
 
 
-<body onload="showMen()">
+<body onload="AddKids()">
 
 	<div >
-		<div style= "color: white;">
-            
-            <h1 style="text-align: center;" >Men sneakers</h1>
-            
-            <div id="mensneakers"></div> 
+		<div >
+			<div>
+				<div style= "color: white;" >
+					<h1 style="text-align: center;">Kids sneakers</h1>
 
+					<div id="addToCartKids"></div> 
+
+					</ul>
+
+				</div>
+			</div>
 		</div>
 		<div >
-			
+
 			<table style="align-self: center;"> 
 				<ul>
 					<li class="catalogbutton">
-						<a href="#"  onclick="fetchPage('men.html'),showMen()">Men's sneakers</a>
+						<a href="#"  onclick="fetchPage('AddMen.html'),AddMen()">Men's sneakers</a>
 					</li>
 					<li class="catalogbutton">
-						<a href="#" onclick="fetchPage('woman.html'),showWoman()">Woman's sneakers</a>
+						<a href="#" onclick="fetchPage('AddWoman.html'),AddWoman()">Woman's sneakers</a>
 					</li>
 					<li class="catalogbutton">
-						<a href="#" onclick="fetchPage('kids.html'),showKids()">Kids sneakers</a>
+						<a href="#" onclick="fetchPage('AddKids.html'),AddKids()">Kids sneakers</a>
 					</li>
 		
 				</ul>
@@ -42,7 +47,8 @@
 		</div>
 		
 	</div>
-
+	</div>
+	</div>
 </body>
 
 
