--- a/public/kids.html
+++ b/public/kids.html
@@ -18,7 +18,7 @@
 		<div >
 			<div>
 				<div style= "color: white;" >
-					<h1>Kids sneakers :</h1>
+					<h1 style="text-align: center;">Kids sneakers</h1>
 
 					<div id="kidssneakers"></div> 
 
@@ -29,18 +29,20 @@
 		</div>
 		<div >
 
-			<ul>
-				<li>
-					<a href="#" class="active" onclick="fetchPage('men.html'),showMen()">Men's sneakers</a>
-				</li>
-				<li>
-					<a href="#" onclick="fetchPage('woman.html'),showWoman()">Woman's sneakers</a>
-				</li>
-				<li>
-					<a href="#" onclick="fetchPage('kids.html'),showKids()">Kids sneakers</a>
-				</li>
-
-			</ul>
+		    <table style="align-self: center;"> 
+				<ul>
+					<li class="catalogbutton"  >
+						<a href="#"  onclick="fetchPage('men.html'),showMen()">Men's sneakers</a>
+					</li>
+					<li class="catalogbutton">
+						<a href="#" onclick="fetchPage('woman.html'),showWoman()">Woman's sneakers</a>
+					</li>
+					<li class="catalogbutton" >
+						<a href="#" onclick="fetchPage('kids.html'),showKids()">Kids sneakers</a>
+					</li>
+		
+				</ul>
+			</table>
 
 		</div>
 		
