--- a/public/AddMen.html
+++ b/public/AddMen.html
@@ -12,14 +12,14 @@
 
 
 
-<body onload="showMen()">
+<body onload="AddMen()">
 
 	<div >
 		<div style= "color: white;">
             
             <h1 style="text-align: center;" >Men sneakers</h1>
             
-            <div id="mensneakers"></div> 
+            <div id="addToCartMen"></div> 
 
 		</div>
 		<div >
@@ -27,13 +27,13 @@
 			<table style="align-self: center;"> 
 				<ul>
 					<li class="catalogbutton">
-						<a href="#"  onclick="fetchPage('men.html'),showMen()">Men's sneakers</a>
+						<a href="#"  onclick="fetchPage('AddMen.html'),AddMen()">Men's sneakers</a>
 					</li>
 					<li class="catalogbutton">
-						<a href="#" onclick="fetchPage('woman.html'),showWoman()">Woman's sneakers</a>
+						<a href="#" onclick="fetchPage('AddWoman.html'),AddWoman()">Woman's sneakers</a>
 					</li>
 					<li class="catalogbutton">
-						<a href="#" onclick="fetchPage('kids.html'),showKids()">Kids sneakers</a>
+						<a href="#" onclick="fetchPage('AddKids.html'),AddKids()">Kids sneakers</a>
 					</li>
 		
 				</ul>
