delete prudocts from order after order complete

--- a/public/orderClosed.html
+++ b/public/orderClosed.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You</title>
-    
+    <title>Order Closed</title>
+
+    <script src="./js/indexJS.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,7 +22,7 @@
             
                 <p>Thank you for your purchase.<br><br>We'll be happy to see you again soon.</p>
 
-                <h4> <button id="payButton" onclick="fetchPage('homepage.html'),deleteLastOrder()"> Back To Homepage</button> </h4>
+                <h4> <button onclick="fetchPage('homePage.html'),deleteOrder()"> Back To Home Page </button> </h4>
             </form>
         </p>
 
