--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
           <form>
             <input type="text" id="login" class="fadeIn second" name="login" placeholder="E-Mail" required>
             <input type="text" id="password" class="fadeIn third" name="login" placeholder="password" required>
-            <input type="submit" value="Log In" onclick="order.html">
+            <input type="submit" value="Log In" href='customerindex.html'>
             <!-- <input type="submit" class="fadeIn fourth" value="Log In" onclick="saveClient()" required>      -->
           </form>
       
