manager can add users

--- a/public/homePage.html
+++ b/public/homePage.html
@@ -15,7 +15,7 @@
     
     <!-- Photo -->
 
-    <div class="container">
+    <div class="sneakerlogo">
         <!-- Logo -->
         <div class="center"> 
 
