--- a/public/order.html
+++ b/public/order.html
@@ -41,8 +41,8 @@
 						<label for="cvCode">
 							<span> CV CODE</span>
 							<br><br>
-							<input type="password" name="cvCode" id="cvCode" placeholder="CV" required />
-						</label>
+							<input type="password" name="cvCode" id="cvCode" placeholder="CV" required /> 
+						</label> <br>
 						<input type="submit" class="fadeIn fourth" value="pay" onclick="saveorder(),fetchPage('orderClosed.html')" required>
 					</form>
 
