--- a/public/signUp.html
+++ b/public/signUp.html
@@ -28,7 +28,7 @@
             <input type="text"  class="fadeIn third" name="Email" placeholder="E-Mail" required>
             <input type="text"  class="fadeIn third" name="Phone" placeholder="Phone" required>
             <input type="text"  class="fadeIn third" name="Age" placeholder="Your Age" required>
-            <input type="password"  class="fadeIn third" name="Password" placeholder="Enter Your Password" required>
+            <input type="password"  class="fadeIn third" name="Password" placeholder="Enter Your Password" required> <br>
             <input type="submit" class="fadeIn fourth" value="Sign Up" onclick="saveClient()" required>
            
           </form>
