add search by catogry and mannager can add product

--- a/public/customerindex.html
+++ b/public/customerindex.html
@@ -39,6 +39,15 @@
         <span href="#" id="cart" class="fa fa-shopping-cart" onclick="fetchPage('order.html'),showorder()"></span>
     </div>
 
+    <div class="topnav"> 
+		<div>
+			<form name="search" id="search">
+				<button type="submit" class="search-containerbutton"><i class="fa fa-search" onclick="getval()""></i></button>
+				<input class="search-container" id="search" type="text" autocomplete="off" placeholder="Search">
+
+			</form>
+		</div>
+	</div>
       <!-- render page -->
 
       <div id="rednerPage">
