--- a/public/login.html
+++ b/public/login.html
@@ -21,13 +21,13 @@
           
           <!-- Login Form -->
 
-          <form action="/login" >
+            <form action="/login" >
 
-							<input type="text" id="Email" class="fadeIn second" name="login" placeholder="E-Mail" required>
-							<input type="password" id="password" class="fadeIn third" name="login" placeholder="password" required> <br>
-              <input type="submit" class="fadeIn fourth" value="Log In" required>
+				<input type="text" id="Email" class="fadeIn second" name="Email" placeholder="E-Mail" required>
+				<input type="password" id="password" name="password" placeholder="password" required> <br>
+                <input type="submit" class="fadeIn fourth" value="Log In" required>
 
-					</form>
+		    </form>
 
         </div>
     </div>    
