--- a/public/managerindex.html
+++ b/public/managerindex.html
@@ -30,9 +30,9 @@
         <span class="left"> <img src="./sneakerlogo.jpg" alt="the logo" width="100px" > </span> 
         
         <a href="#" class="w3-bar-item w3-button" onclick="fetchPage('homePage.html')">Home</a>
-        <a href="#" class="w3-bar-item w3-button" onclick="fetchPage('catalog.html')"> Add Shoes</a>
+        <a href="#" class="w3-bar-item w3-button" onclick="fetchPage('managerCatalog.html')"> Add Shoes</a>
         <a href="#" class="w3-bar-item w3-button" onclick="fetchPage('managerSignUp.html')">Add User</a>
-        <a href="#" class="w3-bar-item w3-button" onclick="fetchPage('ordersOpen.html')">Open Orders</a>
+        <a href="#" class="w3-bar-item w3-button" onclick="fetchPage('ordersOpen.html'),showOpenOrders()">Open Orders</a>
         <a href="#" class="w3-bar-item w3-button" onclick="fetchPage('managerDeleteUser.html'),showUsers()">Delete User</a>
         <a href="index.html" class="w3-bar-item w3-button" >log out</a>
       
