the final web before presentation

--- a/public/AddKids.html
+++ b/public/AddKids.html
@@ -4,31 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men catalog</title>
+    <title>Kids catalog</title>
     <script src="indexJS.js"></script>
     <!-- CSS -->
  <link rel="stylesheet" href="./css/catalogCSS.css">
 </head>
 
-
+<!-- This page displays the kids category shoe table and allows the customer to add shoes to the shopping cart -->
 
 <body onload="AddKids()">
 
 	<div >
-		<div >
-			<div>
-				<div style= "color: white;" >
-					<h1 style="text-align: center;">Kids sneakers</h1>
+		<div style= "color: white;" >
+			<h1 style="text-align: center;">Kids sneakers</h1>
 
-					<div id="addToCartKids"></div> 
-
-					</ul>
-
-				</div>
-			</div>
+			<div id="addToCartKids"></div> 
 		</div>
-		<div >
 
+
+		<div >
 			<table style="align-self: center;"> 
 				<ul>
 					<li class="catalogbutton">
@@ -46,8 +40,6 @@
 
 		</div>
 		
-	</div>
-	</div>
 	</div>
 </body>
 
