--- a/public/AddMen.html
+++ b/public/AddMen.html
@@ -10,7 +10,7 @@
  <link rel="stylesheet" href="./css/catalogCSS.css">
 </head>
 
-
+<!-- This page displays the men category shoe table and allows the customer to add shoes to the shopping cart -->
 
 <body onload="AddMen()">
 
