--- a/public/login.html
+++ b/public/login.html
@@ -13,6 +13,7 @@
     <!-- CSS  -->
     <link rel="stylesheet" href="loginCSS.css">
 </head>
+<!-- This page allows an existing user to connect to the website using an email and password -->
 <body >
     <div class="wrapper fadeInDown">
         <div id="formContent">
