--- a/public/managerCatalog.html
+++ b/public/managerCatalog.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="./css/catalogCSS.css">
     
 </head>
- 
+<!-- This page allows the manager to open the product table according to the relevant category -->
 <body>
     <div style= "color: rgb(255, 255, 255); text-align: center;"> <h1> Choose Your Category </h1>  </div>
 
