--- a/public/managerDeleteUser.html
+++ b/public/managerDeleteUser.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="./css/catalogCSS.css">
 
 </head>
+<!-- This page allows the manager to delete an existing user -->
 <body onload="showUsers()">
-    <h1 style="color: white;" >Show users </h1>
+    <h1 style="color: white; text-align: center;" >Existing users </h1>
 
         <div id="activeUsers"></div>
 </body>
