--- a/public/managerSignUp.html
+++ b/public/managerSignUp.html
@@ -10,11 +10,14 @@
          <link rel="stylesheet" href="./css/singUpCSS.css">
          <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
+
+<!-- This page allows the manager to add a new user and set his type -->
+
 <body>
     <div class="wrapper fadeInDown">
         <div id="formContent">
         <h1 class="active">Sign Up</h1>    
-        <h4>Want to add more user? Just fill in the form below.</h4>
+        <h4>If you want to add a new user, <br> fill in the form below.</h4>
         <form action="/addmanager">
             <input type="text"  class="fadeIn second" name="Fname" placeholder="First Name" required>
             <input type="text"  class="fadeIn third" name="Lname" placeholder="Last Name" required>
