--- a/public/managerWoman.html
+++ b/public/managerWoman.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="./css/catalogCSS.css">
         <link rel="stylesheet" href="loginCSS.css">
 </head>
+
+<!-- This page allows the manager to see the table of shoes in the womans category with the option to add a new shoe -->
+
 <body onload="showWoman()">
 
 				<div>
