--- a/public/managerindex.html
+++ b/public/managerindex.html
@@ -21,6 +21,8 @@
 
 </head>
 
+<!-- this is the home page of the manager, after someone log in as manager he will see this page -->
+
 <body onload= "fetchPage('homePage.html')">
 
     <!-- navigation bar -->
@@ -38,12 +40,10 @@
       
       </div>
 
-      <!-- render page -->
+      <div id="rednerPage"> </div>
 
-      <div id="rednerPage">
-          123
+      <!-- footer -->
 
-      </div>
       <div id="footer"  >
         <p>  Bar Linkdin   <a href="https://www.linkedin.com/in/barmeshulam/" class="fa fa-linkedin"></a> Keshet Linkdin   <a href="https://www.linkedin.com/in/keshetmor/" class="fa fa-linkedin"></a>  Nadav Linkdin   <a href="https://www.linkedin.com/in/nadavyerushalmi/" class="fa fa-linkedin"></a> </p>
         <p>&copy; MYSHOES COMPANY INC. All Rights Reserved. </p>  
