--- a/public/ordersOpen.html
+++ b/public/ordersOpen.html
@@ -13,8 +13,11 @@
     <link rel="stylesheet" href="./css/catalogCSS.css">
 
 </head>
+
+<!-- This page shows the manager a table of all open orders -->
+
 <body onload="showOpenOrders()">
-        <h1 style="color: white;">Show Open Orders</h1>
+        <h1 style="color: white; text-align: center;">Open Orders</h1>
 
             <div id="OpenOrders"></div>
 </body>
