--- a/public/signUp.html
+++ b/public/signUp.html
@@ -12,6 +12,9 @@
      <!-- JS -->
      <script src="./js/signUpAndLoginJS.js"></script>
 </head>
+
+<!-- This page allows the customer to enter their personal information and register for the website for the first time -->
+
 <body>
     <div class="wrapper fadeInDown">
         <div id="formContent">
