--- a/public/woman.html
+++ b/public/woman.html
@@ -10,7 +10,7 @@
  <link rel="stylesheet" href="./css/catalogCSS.css">
 </head>
 
-
+<!-- This page allows anyone to see the womans product table without the option to add product to the shopping cart -->
 
 <body onload="showWoman()">
 
