--- a/public/AddWoman.html
+++ b/public/AddWoman.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men catalog</title>
+    <title>Woman catalog</title>
     <script src="indexJS.js"></script>
     <!-- CSS -->
  <link rel="stylesheet" href="./css/catalogCSS.css">
 </head>
 
-
+<!-- This page displays the woman category shoe table and allows the customer to add shoes to the shopping cart -->
 
 <body onload="AddWoman()">
 
