--- a/public/catalog.html
+++ b/public/catalog.html
@@ -12,6 +12,7 @@
     
 </head>
  
+<!-- This page allows anyone to open the product table according to the relevant category -->
 <body>
     <div style= "color: rgb(255, 255, 255); text-align: center;"> <h1> Choose Your Category </h1>  </div>
 
