--- a/public/managerKids.html
+++ b/public/managerKids.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="./css/catalogCSS.css">
         <link rel="stylesheet" href="loginCSS.css">
 </head>
+
+<!-- This page allows the manager to see the table of shoes in the kids category with the option to add a new shoe -->
+
 <body onload="showKids()">
 
 				<div>
